--- a/deployment/nginx/christina-sings4you.com.au.conf
+++ b/deployment/nginx/christina-sings4you.com.au.conf
@@ -1,15 +1,33 @@
-# Nginx configuration for christina-sings4you.com.au
+# =============================================================================
+# Nginx Configuration for christina-sings4you.com.au
 # Professional production setup with SSL, security headers, and optimization
+# =============================================================================
+# 
+# Installation Instructions:
+# 1. Copy this file to: /etc/nginx/sites-available/christina-sings4you.com.au.conf
+# 2. Create symlink: ln -s /etc/nginx/sites-available/christina-sings4you.com.au.conf /etc/nginx/sites-enabled/
+# 3. Remove default site: rm /etc/nginx/sites-enabled/default
+# 4. Test config: nginx -t
+# 5. Reload Nginx: systemctl reload nginx
+#
+# SSL Certificate Setup (Let's Encrypt):
+# 1. Install certbot: apt-get install certbot python3-certbot-nginx
+# 2. Get certificate: certbot --nginx -d christina-sings4you.com.au -d www.christina-sings4you.com.au
+# 3. Auto-renewal: certbot renew --dry-run
+# =============================================================================
 
-# Redirect HTTP to HTTPS
+# =============================================================================
+# HTTP Server Block - Redirect to HTTPS
+# =============================================================================
 server {
     listen 80;
     listen [::]:80;
     server_name christina-sings4you.com.au www.christina-sings4you.com.au;
     
-    # Allow Let's Encrypt challenges
+    # Allow Let's Encrypt ACME challenges for certificate renewal
     location /.well-known/acme-challenge/ {
         root /var/www/html;
+        allow all;
     }
     
     # Redirect all other HTTP traffic to HTTPS
@@ -18,19 +36,23 @@ server {
     }
 }
 
-# HTTPS Server Configuration
+# =============================================================================
+# HTTPS Server Block - Main Configuration
+# =============================================================================
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name christina-sings4you.com.au www.christina-sings4you.com.au;
 
+    # ========================================================================
     # SSL Configuration (Let's Encrypt)
-    # Note: If SSL certificate is not installed yet, comment out SSL lines and use HTTP only
+    # ========================================================================
+    # Note: If SSL certificate is not installed yet, comment out SSL lines below
     # After installing SSL with certbot, uncomment these lines
     ssl_certificate /etc/letsencrypt/live/christina-sings4you.com.au/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/christina-sings4you.com.au/privkey.pem;
     
-    # SSL Security Settings
+    # SSL Security Settings - Modern TLS only
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
     ssl_prefer_server_ciphers off;
@@ -38,79 +60,149 @@ server {
     ssl_session_timeout 10m;
     ssl_session_tickets off;
     
-    # OCSP Stapling (only if SSL is installed)
+    # OCSP Stapling (improves SSL performance and security)
     ssl_stapling on;
     ssl_stapling_verify on;
     ssl_trusted_certificate /etc/letsencrypt/live/christina-sings4you.com.au/chain.pem;
     resolver 8.8.8.8 8.8.4.4 valid=300s;
     resolver_timeout 5s;
 
+    # ========================================================================
     # Security Headers
+    # ========================================================================
+    # HSTS - Force HTTPS for 1 year
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+    
+    # Prevent clickjacking
     add_header X-Frame-Options "SAMEORIGIN" always;
+    
+    # Prevent MIME type sniffing
     add_header X-Content-Type-Options "nosniff" always;
+    
+    # XSS Protection
     add_header X-XSS-Protection "1; mode=block" always;
+    
+    # Referrer Policy
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    
+    # Content Security Policy
+    # Adjust as needed for your application
     add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://fonts.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https: blob:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://api.cloudinary.com https://res.cloudinary.com;" always;
 
+    # ========================================================================
+    # Basic Server Configuration
+    # ========================================================================
     # Root directory for static files (frontend build)
     root /var/www/christina-sings4you/dist/client;
     index index.html;
 
+    # Server name for error pages
+    server_name_in_redirect off;
+
+    # ========================================================================
     # Logging
+    # ========================================================================
     access_log /var/log/nginx/christina-sings4you-access.log;
     error_log /var/log/nginx/christina-sings4you-error.log;
 
+    # ========================================================================
     # Gzip Compression
+    # ========================================================================
     gzip on;
     gzip_vary on;
     gzip_proxied any;
     gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml font/truetype font/opentype application/vnd.ms-fontobject image/svg+xml;
+    gzip_min_length 1000;
+    gzip_types 
+        text/plain 
+        text/css 
+        text/xml 
+        text/javascript 
+        application/json 
+        application/javascript 
+        application/xml+rss 
+        application/rss+xml 
+        font/truetype 
+        font/opentype 
+        application/vnd.ms-fontobject 
+        image/svg+xml;
     gzip_disable "msie6";
 
-    # Client body size limit (for file uploads)
+    # ========================================================================
+    # Client Configuration
+    # ========================================================================
+    # Maximum body size for file uploads (adjust as needed)
     client_max_body_size 10M;
+    
+    # Buffer size for reading client request body
+    client_body_buffer_size 128k;
 
+    # ========================================================================
     # Timeouts
+    # ========================================================================
     client_body_timeout 12;
     client_header_timeout 12;
     keepalive_timeout 15;
     send_timeout 10;
 
-    # Health check endpoint (bypass proxy)
+    # ========================================================================
+    # Location Blocks
+    # ========================================================================
+
+    # ------------------------------------------------------------------------
+    # Health Check Endpoint (bypass proxy, for monitoring)
+    # ------------------------------------------------------------------------
     location /health {
         access_log off;
         return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
 
-    # API Proxy to Backend
+    # ------------------------------------------------------------------------
+    # API Proxy to Backend Node.js Server
+    # ------------------------------------------------------------------------
     location /api {
+        # Proxy to backend server
         proxy_pass http://localhost:3001;
+        
+        # HTTP version
         proxy_http_version 1.1;
+        
+        # WebSocket support
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
+        
+        # Standard proxy headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Forwarded-Port $server_port;
+        
+        # Cache bypass for WebSocket
         proxy_cache_bypass $http_upgrade;
         
-        # Timeouts for API
+        # Timeouts for API requests
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
         
-        # Buffer settings
+        # Buffer settings for better performance
         proxy_buffering on;
         proxy_buffer_size 4k;
         proxy_buffers 8 4k;
         proxy_busy_buffers_size 8k;
+        proxy_temp_file_write_size 8k;
+        
+        # Don't pass request body to proxy if method is GET/HEAD
+        proxy_pass_request_body on;
+        proxy_pass_request_headers on;
     }
 
-    # Sitemap proxy
+    # ------------------------------------------------------------------------
+    # Sitemap Proxy
+    # ------------------------------------------------------------------------
     location /sitemap.xml {
         proxy_pass http://localhost:3001;
         proxy_http_version 1.1;
@@ -118,20 +210,32 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Cache sitemap for 1 hour
+        proxy_cache_valid 200 1h;
     }
 
-    # Static files caching
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+    # ------------------------------------------------------------------------
+    # Static Files Caching
+    # ------------------------------------------------------------------------
+    # Cache static assets (images, CSS, JS, fonts) for 1 year
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot|webp|avif)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
         access_log off;
+        
+        # Enable CORS for fonts if needed
+        # add_header Access-Control-Allow-Origin "*";
     }
 
-    # Frontend SPA routing - serve index.html for all routes
+    # ------------------------------------------------------------------------
+    # Frontend SPA Routing
+    # ------------------------------------------------------------------------
+    # Serve index.html for all routes (React Router)
     location / {
         try_files $uri $uri/ /index.html;
         
-        # Cache control for HTML
+        # Cache control for HTML - no cache
         add_header Cache-Control "no-cache, no-store, must-revalidate";
         add_header Pragma "no-cache";
         add_header Expires "0";
@@ -141,31 +245,72 @@ server {
         add_header X-Content-Type-Options "nosniff" always;
     }
 
-    # Deny access to hidden files
+    # ------------------------------------------------------------------------
+    # Security - Deny Access to Hidden Files
+    # ------------------------------------------------------------------------
     location ~ /\. {
         deny all;
         access_log off;
         log_not_found off;
     }
 
-    # Deny access to backup files
+    # ------------------------------------------------------------------------
+    # Security - Deny Access to Backup Files
+    # ------------------------------------------------------------------------
     location ~ ~$ {
         deny all;
         access_log off;
         log_not_found off;
     }
 
-    # Deny access to sensitive files
-    location ~ /\.(env|git|svn) {
+    # ------------------------------------------------------------------------
+    # Security - Deny Access to Sensitive Files
+    # ------------------------------------------------------------------------
+    location ~ /\.(env|git|svn|hg|bzr) {
         deny all;
         access_log off;
         log_not_found off;
     }
 
-    # Deny access to package files
-    location ~ (package\.json|package-lock\.json|tsconfig\.json|\.env) {
+    # ------------------------------------------------------------------------
+    # Security - Deny Access to Configuration Files
+    # ------------------------------------------------------------------------
+    location ~ (package\.json|package-lock\.json|tsconfig\.json|\.env|\.env\.local|\.env\.production) {
         deny all;
         access_log off;
         log_not_found off;
     }
+
+    # ------------------------------------------------------------------------
+    # Security - Deny Access to Source Files
+    # ------------------------------------------------------------------------
+    location ~ \.(ts|tsx|jsx|map)$ {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # ------------------------------------------------------------------------
+    # Robots.txt (if not served by backend)
+    # ------------------------------------------------------------------------
+    # Uncomment if you want to serve robots.txt from Nginx
+    # location = /robots.txt {
+    #     return 200 "User-agent: *\nDisallow:\n";
+    #     add_header Content-Type text/plain;
+    # }
 }
+
+# =============================================================================
+# End of Configuration
+# =============================================================================
+# 
+# After making changes:
+# 1. Test configuration: sudo nginx -t
+# 2. Reload Nginx: sudo systemctl reload nginx
+# 3. Check logs: sudo tail -f /var/log/nginx/christina-sings4you-error.log
+# 
+# Troubleshooting:
+# - Check backend is running: curl http://localhost:3001/api/health
+# - Check Nginx status: systemctl status nginx
+# - Check PM2 status: pm2 list
+# =============================================================================
